feat(sync): 同步上游 `gallery` 标签

--- a/_config.yml
+++ b/_config.yml
@@ -365,7 +365,11 @@ tag_plugins:
   # {% video %}
   video:
     js: https://fastly.jsdelivr.net/npm/artplayer@5.0.9/dist/artplayer.js
-
+  # {% gallery %}
+  gallery:
+    layout: grid # grid / flow
+    size: mix # s / m / l / xl / mix
+    ratio: square # origin / square
 
 ######## JS 插件 ########
 plugins:
@@ -422,7 +426,7 @@ plugins:
     # 使用 valine 评论可以写: .vcontent img:not(.vemoji)
     # 使用 twikoo 评论可以写: .tk-content img:not([class*="emo"])
     # 使用 waline 评论可以写: #waline_container .vcontent img
-    selector: .swiper-slide img, .vcontent img:not(.vemoji), .tag-plugin.image img # 多个选择器用英文逗号隔开
+    selector: .swiper-slide img, .vcontent img:not(.vemoji), .tag-plugin.image img, .gallery img # 多个选择器用英文逗号隔开
 
   # swiper
   # https://swiperjs.com/
@@ -456,6 +460,8 @@ plugins:
     js: /js/plugins/copycode.js
     default_text: '复制'
     success_text: '已复制'
+  
+
 
 
 ######## 样式 ########
