--- a/_config.yml
+++ b/_config.yml
@@ -517,10 +517,19 @@ style:
 
 ######## 缺省资源文件 ########
 default:
-  avatar: https://fastly.jsdelivr.net/gh/cdn-x/placeholder@1.0.1/avatar/round/3442075.svg
-  link: https://fastly.jsdelivr.net/gh/cdn-x/placeholder@1.0.1/link/8f277b4ee0ecd.svg
-  cover: https://fastly.jsdelivr.net/gh/cdn-x/placeholder@1.0.1/cover/76b86c0226ffd.svg
-  image: https://fastly.jsdelivr.net/gh/cdn-x/placeholder@1.0.1/image/2659360.svg
+  avatar: https://fastly.jsdelivr.net/gh/cdn-x/placeholder@1.0.12/avatar/round/3442075.svg
+  link: https://fastly.jsdelivr.net/gh/cdn-x/placeholder@1.0.12/link/8f277b4ee0ecd.svg
+  cover: https://fastly.jsdelivr.net/gh/cdn-x/placeholder@1.0.12/cover/76b86c0226ffd.svg
+  image: https://fastly.jsdelivr.net/gh/cdn-x/placeholder@1.0.12/image/2659360.svg
+  banner: https://fastly.jsdelivr.net/gh/cdn-x/placeholder@1.0.12/banner/books.jpg
+
+# 使用本地资源
+# default:
+#   avatar: /images/avatar.svg
+#   link: /images/link.svg
+#   cover: /images/cover.svg
+#   image: /images/image.svg
+#   banner: /images/banner.jpg
 
 
 ######## API ########
