--- a/_config.cn.yml
+++ b/_config.cn.yml
@@ -35,10 +35,26 @@ plugins:
     transition: blur # blur, fade
 
   scrollreveal:
-    js: https://lf9-c dn-tos.bytecdntp.com/cdn/expire-1-M/scrollReveal.js/4.0.9/scrollreveal.min.js
+    js: https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/scrollReveal.js/4.0.9/scrollreveal.min.js
 
   mathjax:
     cdn: https://registry.npmmirror.com/mathjax/3/files/es5/tex-mml-chtml.js #TODO: 跨版本测试
+
+data_services:
+  timeline: 
+    ext:
+      marked: https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/marked/4.0.2/marked.min.js
+  artplayer: 
+    ext:
+      artplayer: https://registry.npmmirror.com/artplayer/5.1.7/files/dist/artplayer.js
+  music:
+    css:
+      APlayer: https://registry.npmmirror.com/aplayer/latest/files/dist/APlayer.min.css
+    ext:
+      APlayer: https://registry.npmmirror.com/aplayer/latest/files/dist/APlayer.min.js
+      MetingJS: https://registry.npmmirror.com/meting/latest/files/dist/Meting.min.js
+
+
 
 # 使用本地资源
 # default:
