--- a/_config.yml
+++ b/_config.yml
@@ -249,6 +249,7 @@ comments:
 footer:
   social:
     ### 社交平台链接按钮（使用 HTML 语法）
+    # icon: 支持 svg/img 标签，可以定义在 icons.yml 文件中，也支持外部图片的 URL
     # github:
     #   icon: '<img no-lazy width="24" height="24" src="https://fastly.jsdelivr.net/gh/cdn-x/placeholder@1.0.3/social/08a41b181ce68.svg"/>'
     #   url: /
