--- a/_config.yml
+++ b/_config.yml
@@ -344,6 +344,10 @@ tag_plugins:
   hashtag:
     default_color: yellow # red, orange, yellow, green, cyan, blue, purple
 
+  # {% button 标题 链接 %}
+  button:
+    default_color: cyan # theme, accent, red, orange, yellow, green, cyan, blue, purple
+
   # {% okr o1 percent:0.5 status:normal %}
   okr:
     border: true # 是否显示边框
