--- a/_config.cn.yml
+++ b/_config.cn.yml
@@ -17,7 +17,7 @@ tag_plugins:
 plugins:
   jquery: https://registry.npmmirror.com/jquery/3.7.1/files/dist/jquery.min.js
 
-  marked: https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/marked/4.0.2/marked.min.js
+  marked: https://registry.npmmirror.com/marked/4.0.2/files/marked.min.js
 
   fancybox:
     js: https://registry.npmmirror.com/@fancyapps/ui/4.0.31/files/dist/fancybox.umd.js
@@ -27,15 +27,13 @@ plugins:
     css: https://registry.npmmirror.com/swiper/11.1.5/files/swiper-bundle.min.css
     js: https://registry.npmmirror.com/swiper/11.1.5/files/swiper-bundle.min.js
 
-  instant_click:
-    js: https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/instantclick/3.1.0/instantclick.min.js
 
   lazyload:
     js: https://registry.npmmirror.com/vanilla-lazyload/19.1.3/files/dist/lazyload.min.js
     transition: blur # blur, fade
 
   scrollreveal:
-    js: https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/scrollReveal.js/4.0.9/scrollreveal.min.js
+    js: https://registry.npmmirror.com/scrollreveal/4.0.9/files/dist/scrollreveal.min.js
 
   mathjax:
     cdn: https://registry.npmmirror.com/mathjax/3/files/es5/tex-mml-chtml.js #TODO: 跨版本测试
@@ -43,7 +41,7 @@ plugins:
 data_services:
   timeline:
     ext:
-      marked: https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/marked/4.0.2/marked.min.js
+      marked: https://registry.npmmirror.com/marked/4.0.2/files/marked.min.js
   artplayer:
     ext:
       artplayer: https://registry.npmmirror.com/artplayer/5.1.7/files/dist/artplayer.js
